# libretto

./: .bazelrc  .gazelle.yaml  .gitignore  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  buf.gen.yaml  go.mod  go.sum  spec.md  sqlc.yaml
.github/workflows/: ci.yml
apps/desktop/: app.go  go.mod  main.go  wails.json
apps/desktop/frontend/: package.json  package.json.md5  pnpm-lock.yaml  tailwind.config.js
apps/desktop/frontend/src/: App-old.tsx  App.tsx  WizardSteps.tsx  style.css
apps/desktop/frontend/src/components/: AIOrchestra.tsx  ConfirmDialog.tsx  Sidebar.tsx
apps/desktop/frontend/src/components/ui/: button.tsx  card.tsx
apps/desktop/frontend/src/hooks/: useNavigation.ts  useWizardPersistence.ts
apps/desktop/frontend/wailsjs/go/: models.ts
apps/desktop/frontend/wailsjs/go/main/: App.d.ts  App.js
cmd/dashboard/: BUILD.bazel  delete_test.go  demo_test.go  demo_working_set_test.go  graph_api_test.go  main.go
cmd/dbinspect/: BUILD.bazel  main.go
cmd/dbseed/: BUILD.bazel  main.go
cmd/demo-cross-project/: BUILD.bazel  main.go
cmd/integration-test/: BUILD.bazel  main.go
cmd/libretto/: main.go
docs/: README.md  TEMPLATE_LIBRARY.md  bootstrap-helper.md  breakthrough-summary.md  cli-tools.md  cross-project-continuity.md  development-guide.md  graphwrite-api.md  quick-reference.md  testing-and-monitoring.md
docs/adr/: 0001-data-store-and-graph-abstraction.md  0002-orchestration-choice-mvp.md  0003-auth-strategy-mvp.md  0004-ui-realtime-strategy.md  0005-events-and-idempotency.md  0006-backend-language-and-runtime.md  0007-monorepo-and-bazel.md  0008-idl-and-rpc.md  0009-agent-orchestration-seams-and-langgraph-sidecar.md  0010-event-contract-source-of-truth.md  0011-pivot-to-modular-monolith.md
docs/ddd/: overview.md
docs/guide/: README.md  getting-started.md
internal/agents/narrative/: BUILD.bazel  narrative.go
internal/agents/plotweaver/: BUILD.bazel  plotweaver.go
internal/app/: http.go  orchestrator.go
internal/context/: builder.go  retriever.go  selector.go
internal/db/: BUILD.bazel  annotations.sql.go  annotations_test.go  database.go  entities.sql.go  entities_test.go  graph_versions.sql.go  graph_versions_test.go  integration_test.go  models.go  projects.sql.go  projects_test.go  querier.go  relationships.sql.go  relationships_test.go  scenes.sql.go
internal/db/migrations/: 001_initial_schema.sql  002_living_narrative_schema.sql
internal/db/queries/: annotations.sql  entities.sql  graph_versions.sql  projects.sql  relationships.sql  scenes.sql
internal/graphwrite/: BUILD.bazel  cross_project_demo_test.go  example_test.go  read.go  stable_id_demo_test.go  store.go  store_test.go
internal/monitoring/: BUILD.bazel  logger.go
internal/repository/: BUILD.bazel  scenes.go  scenes_test.go
internal/types/: BUILD.bazel  entities.go  entities_test.go
plans/: execution-plan.md  libretto-product-strategy.md  tech-stack-guidelines.md
plans/tickets/: 00000-repo-scaffolding-and-ci-baseline.md  00001-baton-api-and-plotweaver-stub-vertical-slice.md  00002-wire-pubsub-and-graphwrite-skeleton-for-persistence.md  00003-devpush-publisher-and-envelope-validation.md  00004-plotweaver-consumes-directive-and-emits-sceneproposal.md  00005-bug-fix-api-tests-green.md  00006-graphwrite-apply-from-sceneproposalready.md  00006w-pivot-and-collapse-to-modular-monolith.md  00007-ddd-overview-and-context-manager-foundation.md  00007-graphwrite-firestore-emulator-persistence.md  00007w-firestore-emulator-store-and-ui-skeleton.md  00008-canvas-inspector-minimal-read-from-firestore.md  00008-local-vector-db-and-rag-pipeline.md  00009-wails-desktop-scaffold-and-shadcn-setup.md
proto/libretto/baton/v1/: baton.proto
proto/libretto/events/v1/: events.proto
proto/libretto/graph/v1/: graphwrite.proto
proto/libretto/scene/v1/: scene.proto
schemas/events/: bootstrap-graph-ready.schema.json  envelope.schema.json  import-applied.schema.json  import-review-submitted.schema.json  template-applied.schema.json
schemas/model/: entities.schema.json
schemas/templates/: templates.schema.json
scripts/: ci_local.sh  dev_matrix.sh  dev_smoke.sh  dev_up.sh
services/agents/narrativeingest/: BUILD.bazel  handler.go  handler_test.go  main.go
services/agents/plotweaver/: BUILD.bazel  handler.go  handler_test.go  main.go
services/agents/plotweaver/publisher/: publisher.go  selector.go
services/api/: BUILD.bazel  main.go  main_test.go
services/api/baton/: handler.go
services/api/publisher/: devpush.go  publisher.go  pubsub.go  selector.go  selector_test.go
services/api/server/: baton_server.go  baton_server_negative_test.go  baton_server_test.go
services/graphwrite/: BUILD.bazel  main.go
services/graphwrite/server/: server.go  server_integration_test.go  server_test.go
