module(name = "libretto")

bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle",  version = "0.34.0", repo_name = "bazel_gazelle")

# Register Go SDK/toolchains via Bzlmod
# See: https://github.com/bazelbuild/rules_go#bzlmod
_go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
use_repo(_go_sdk, "go_sdk")

# (Optional) Make Gazelle available; not required for builds
_gazelle = use_extension("@bazel_gazelle//:extensions.bzl", "gazelle")
use_repo(_gazelle, "gazelle")

