workspace(name = "libretto")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_go
http_archive(
    name = "io_bazel_rules_go",
    sha256 = "",
    urls = ["https://github.com/bazelbuild/rules_go/releases/download/v0.48.0/rules_go-v0.48.0.zip"],
)

# gazelle
http_archive(
    name = "bazel_gazelle",
    sha256 = "",
    urls = ["https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.34.0/bazel-gazelle-v0.34.0.zip"],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_rules_dependencies", "go_register_toolchains")
load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

go_rules_dependencies()
go_register_toolchains()
gazelle_dependencies()

# Gazelle for updating BUILD files
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

