load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dbseed_lib",
    srcs = ["main.go"],
    importpath = "github.com/barrynorthern/libretto/cmd/dbseed",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/db",
        "//internal/types",
        "@com_github_google_uuid//:uuid",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)

go_binary(
    name = "dbseed",
    embed = [":dbseed_lib"],
    visibility = ["//visibility:public"],
)