load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "integration-test_lib",
    srcs = ["main.go"],
    importpath = "github.com/barrynorthern/libretto/cmd/integration-test",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/db",
        "//internal/monitoring",
        "//internal/types",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)

go_binary(
    name = "integration-test",
    embed = [":integration-test_lib"],
    visibility = ["//visibility:public"],
)