load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "database.go",
        "db.go",
        "models.go",
        "querier.go",
        "scenes.sql.go",
    ],
    embedsrcs = glob(["migrations/*.sql"]),
    importpath = "github.com/barrynorthern/libretto/internal/db",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_mattn_go_sqlite3//:go_default_library"],
)
