load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = [
        "annotations.sql.go",
        "database.go",
        "db.go",
        "entities.sql.go",
        "graph_versions.sql.go",
        "models.go",
        "projects.sql.go",
        "querier.go",
        "relationships.sql.go",
        "scenes.sql.go",
    ],
    embedsrcs = glob(["migrations/*.sql"]),
    importpath = "github.com/barrynorthern/libretto/internal/db",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_mattn_go_sqlite3//:go_default_library"],
)

go_test(
    name = "db_test",
    srcs = [
        "annotations_test.go",
        "entities_test.go",
        "graph_versions_test.go",
        "integration_test.go",
        "projects_test.go",
        "relationships_test.go",
    ],
    embed = [":db"],
    deps = [
        "//internal/types",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)
