load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = ["scenes.go"],
    importpath = "github.com/barrynorthern/libretto/internal/repository",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/db",
        "@com_github_google_uuid//:go_default_library",
    ],
)

go_test(
    name = "repository_test",
    srcs = ["scenes_test.go"],
    embed = [":repository"],
    deps = ["//internal/db"],
)
