load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = ["entities.go"],
    importpath = "github.com/barrynorthern/libretto/internal/types",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "types_test",
    srcs = ["entities_test.go"],
    embed = [":types"],
)