load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "plotweaver_lib",
    srcs = ["plotweaver.go"],
    importpath = "github.com/barrynorthern/libretto/internal/agents/plotweaver",
    deps = ["@com_github_google_uuid//:go_default_library"],
    visibility = ["//visibility:public"],
)

