load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "narrativeingest_lib",
    srcs = [
        "main.go",
        "handler.go",
    ],
    importpath = "github.com/barrynorthern/libretto/services/agents/narrativeingest",
    deps = [
        "//gen/go/libretto/events/v1:events_v1",
        "//gen/go/libretto/graph/v1:graph_v1",
        "//gen/go/libretto/graph/v1/graphv1connect:graph_v1_connect",
        "@com_connectrpc_connect//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
    visibility = ["//visibility:private"],
)

go_binary(
    name = "narrativeingest",
    embed = [":narrativeingest_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "narrativeingest_test",
    srcs = ["handler_test.go"],
    embed = [":narrativeingest_lib"],
    deps = [
        "//gen/go/libretto/events/v1:events_v1",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
    size = "small",
)

